k8s/sampleapp/sampleapp-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleapp-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      application: frontend
  template:
    metadata:
      labels:
        application: frontend
    spec:
      containers:
      - name: simpleapp-frontend
        image: praveenkumar081097/simpleapp:latest
        ports:
        - containerPort: 80
          name: frontend-svc
