k8s/sampleapp/sampleapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpleapp-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: centosui.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
            path: /
